--- a/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Login.cshtml
@@ -19,7 +19,7 @@
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password"></label>
+                    <label asp-for="Input.Password">Senha</label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn btn-primary">Login</button>
                 </div>
                 <div class="form-group">
                     <p>
