--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayNameFor(model => model.Data)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Valor)
+               R$ @Html.DisplayNameFor(model => model.Valor)
             </th>
             <!--
             <th>
