--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -1,21 +1,23 @@
 ﻿@model IEnumerable<BlockTechMVC.Models.Transacao>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Transações";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
-<p>
+<!--
+    <p>
     <a asp-action="Create">Create New</a>
 </p>
+    -->
 <table class="table">
     <thead>
         <tr>
-         <!-- <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        -->
+            <!-- <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            -->
             <th>
                 @Html.DisplayNameFor(model => model.Tipo)
             </th>
@@ -29,28 +31,29 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <!--
-        <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-    -->
-            <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Data)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Valor)
-            </td>
-            <td>
-                <!--    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |-->
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) 
-                <!-- @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })-->
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <!--
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                -->
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tipo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Valor)
+                </td>
+                <td>
+                    <!--    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |-->
+                    @Html.ActionLink("Detalhes", "Detalhes", new { /* id=item.PrimaryKey */ })
+                    <!-- @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })-->
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
