--- a/BlockTechMVC/BlockTechMVC/Views/Home/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Home/Index.cshtml
@@ -4,5 +4,25 @@
 
 <div class="text-center">
     <h1 class="display-4">Bem vindo</h1>
+    <br />
+    <br />
+    <br />
+    <div class="container">
+  
+        <div class="col-6">
+            <h3 class="text-left">Um novo conceito para gerenciar seus Criptoativos</h3>
+            <hr />
+            <p class="text-left">
+                Acompanhe todas as operações realizadas, visualize 
+                relatórios executivos, tomada de decisões e diversas 
+                operações. Com o sistema, você terá uma ampla visão 
+                de seus investimentos com diversas ferramentas para 
+                análise de investimentos ao longo prazo.
+            </p>
+        </div>
+        <div class="col-6">
 
+        </div>
+    </div>
+    
 </div>
