--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BlockTechMVC.Models.Criptomoeda
+﻿@model IEnumerable<BlockTechMVC.Models.Criptomoeda>
 
 @{
     ViewData["Title"] = "Criptomoedas";
@@ -6,32 +6,36 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div>
-    <hr />
-    <dl class="row">
-        <!--
-       <dt class = "col-sm-2">
-           @Html.DisplayNameFor(model => model.Id)
-       </dt>
-       <dd class = "col-sm-10">
-           @Html.DisplayFor(model => model.Id)
-       </dd>
-        -->
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Simbolo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Simbolo)
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Detalhes", "Detalhes", new { /* id = Model.PrimaryKey */ }) |
-    <!--   <a asp-action="Index">Voltar</a>-->
-</div>
+<p>
+    <a asp-action="Create">Adicionar</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Simbolo)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Simbolo)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
