Criando conta e saldo dos clientes

--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedaHojes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedaHojes/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Adicionar</a>
+    <a asp-action="Create" class="btn btn-primary">Adicionar</a>
 </p>
 <table class="table">
     <thead>
