--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Adicionar</a>
+    <a asp-action="Create" class="btn btn-primary">Adicionar</a>
 </p>
 <table class="table">
     <thead>
@@ -23,7 +23,7 @@
             </th>
             <!--
             <th>
-                @Html.DisplayNameFor(model => model.CriptomoedaHoje)
+           //     @Html.DisplayNameFor(model => model.CriptomoedaHoje)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ApplicationUserId)
@@ -44,7 +44,7 @@
             <td>
                 R$ @Html.DisplayFor(modelItem => item.Valor)
             </td>
-            <!--
+            <!-- 
             <td>
                 @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Id)
             </td>
