--- a/BlockTechMVC/BlockTechMVC/Views/SaldoCriptomoedaHojes/Delete.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/SaldoCriptomoedaHojes/Delete.cshtml
@@ -41,10 +41,16 @@
             @Html.DisplayFor(model => model.CompraCriptomoeda.ValorAplicado)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CompraCriptomoeda.CalcularQuantidadeCriptomoeda())
+            @Html.DisplayNameFor(model => model.CompraCriptomoeda.QuantidadeCriptomoeda)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CompraCriptomoeda.CalcularQuantidadeCriptomoeda())
+            @Html.DisplayFor(model => model.CompraCriptomoeda.QuantidadeCriptomoeda)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Saldo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Saldo)
         </dd>
 
     </dl>
