--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -6,13 +6,14 @@
     <title>@ViewData["Title"] - BlockTech</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="shortcut icon" href="~/Icon/logo.ico" type="image/x-icon" />
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    
                     <img src="~/images/logoMin.png" width="50"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -23,16 +24,16 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CriptomoedaHojes" asp-action="Index">Criptomoedas</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedaHojes" asp-action="Index">Criptomoedas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Transacoes" asp-action="Index">Transações</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Index">Transações</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SaldoCriptomoedaHojes" asp-action="Index">Saldo</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="SaldoCriptomoedaHojes" asp-action="Index">Saldo</a>
                         </li>
                     </ul>
                 </div>
