--- a/BlockTechMVC/BlockTechMVC/wwwroot/css/site.css
+++ b/BlockTechMVC/BlockTechMVC/wwwroot/css/site.css
@@ -69,3 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.home {
+    font-size: 150%;
+    line-height: 160%;
+    max-width: 85%;
+}
+
+.line {
+    font-size: 140%;
+    line-height: 160%;
+    max-width: 80%;
+}
