Alterando diagrama de classes - alteração na estrutura

--- a/BlockTechMVC/BlockTechMVC/Views/Home/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <br />
     <br />
     <div class="container">
-        <div class="col-6">
+        <div class="col-12 col-md-6 col-lg-6 ">
             <h3 class="text-left home">Um novo conceito para gerenciar seus Criptoativos</h3>
             <hr />
             <br />
