model, view, controller, bd

--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -27,13 +27,13 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedaHojes" asp-action="Index">Criptomoedas</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedasHoje" asp-action="Index">Criptomoedas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Index">Transações</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="SaldoCriptomoedaHojes" asp-action="Index">Saldo</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Saldos" asp-action="Index">Saldo</a>
                         </li>
                     </ul>
                 </div>
