--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Edit.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Edit.cshtml
@@ -1,26 +1,18 @@
 ﻿@model BlockTechMVC.Models.CriptomoedaHoje
 
 @{
-    ViewData["Title"] = "Adicionar";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Adicionar</h1>
+<h1>Edit</h1>
 
+<h4>CriptomoedaHoje</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create"> 
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Criptomoeda.Nome" class="control-label"></label>
-                <input asp-for="Criptomoeda.Nome" class="form-control" />
-                <span asp-validation-for="Criptomoeda.Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Criptomoeda.Simbolo" class="control-label"></label>
-                <input asp-for="Criptomoeda.Simbolo" class="form-control" />
-                <span asp-validation-for="Criptomoeda.Simbolo" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Data" class="control-label"></label>
                 <input asp-for="Data" class="form-control" />
@@ -31,20 +23,20 @@
                 <input asp-for="Valor" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
-            <!---->
             <div class="form-group">
                 <label asp-for="CriptomoedaId" class="control-label"></label>
                 <select asp-for="CriptomoedaId" class="form-control" asp-items="ViewBag.CriptomoedaId"></select>
+                <span asp-validation-for="CriptomoedaId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
