--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Create.cshtml
@@ -36,8 +36,8 @@
                 <select asp-for="ContaClienteId" class ="form-control" asp-items="ViewBag.ContaClienteId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ContaId" class="control-label"></label>
-                <select asp-for="ContaId" class ="form-control" asp-items="ViewBag.ContaId"></select>
+                <label asp-for="ContaDestinoId" class="control-label"></label>
+                <select asp-for="ContaDestinoId" class ="form-control" asp-items="ViewBag.ContaDestinoId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
