--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Edit.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Edit.cshtml
@@ -39,9 +39,9 @@
                 <span asp-validation-for="ContaClienteId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ContaId" class="control-label"></label>
-                <select asp-for="ContaId" class="form-control" asp-items="ViewBag.ContaId"></select>
-                <span asp-validation-for="ContaId" class="text-danger"></span>
+                <label asp-for="ContaDestinoId" class="control-label"></label>
+                <select asp-for="ContaDestinoId" class="form-control" asp-items="ViewBag.ContaDestinoId"></select>
+                <span asp-validation-for="ContaDestinoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
