--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model BlockTechMVC.Models.CriptomoedaHoje
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>CriptomoedaHoje</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,23 +17,27 @@
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Criptomoeda.Simbolo" class="control-label"></label>
+                <select asp-for="Criptomoeda.Simbolo" class="form-control" asp-items="ViewBag.Criptomoeda.Simbolo"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Criptomoeda.Nome" class="control-label"></label>
+                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.Criptomoeda.Nome"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
                 <input asp-for="Valor" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CriptomoedaId" class="control-label"></label>
-                <select asp-for="CriptomoedaId" class ="form-control" asp-items="ViewBag.CriptomoedaId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
