--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Details.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Details.cshtml
@@ -1,36 +1,41 @@
 ﻿@model BlockTechMVC.Models.CriptomoedaHoje
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>CriptomoedaHoje</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Criptomoeda.Simbolo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Criptomoeda.Simbolo)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Criptomoeda.Nome)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Criptomoeda.Nome)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Valor)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Criptomoeda)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Criptomoeda.Id)
+        <dd class="col-sm-10">
+            R$ @Html.DisplayFor(model => model.Valor)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="Index">Voltar</a>
 </div>
