--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Create.cshtml
@@ -1,26 +1,35 @@
 ﻿@model BlockTechMVC.Models.Transacao
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>Transacao</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Data" class="control-label"></label>
+                <input asp-for="Data" class="form-control" />
+                <span asp-validation-for="Data" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ContaCliente.ApplicationUser.Nome" class="control-label"></label>
+                <select asp-for="ContaCliente.ApplicationUser.Nome" class="form-control" asp-items="ViewBag.ContaCliente"></select>
+                <span asp-validation-for="ContaCliente.ApplicationUser.Nome" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Tipo" class="control-label"></label>
                 <select asp-for="Tipo" class="form-control"></select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Data" class="control-label"></label>
-                <input asp-for="Data" class="form-control" />
-                <span asp-validation-for="Data" class="text-danger"></span>
+                <label asp-for="CriptomoedaHoje.Criptomoeda.Nome" class="control-label"></label>
+                <select asp-for="CriptomoedaHoje.Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaHoje"></select>
+                <span asp-validation-for="CriptomoedaHoje.Criptomoeda.Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
@@ -28,26 +37,14 @@
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CriptomoedaHojeId" class="control-label"></label>
-                <select asp-for="CriptomoedaHojeId" class ="form-control" asp-items="ViewBag.CriptomoedaHojeId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ContaClienteId" class="control-label"></label>
-                <select asp-for="ContaClienteId" class ="form-control" asp-items="ViewBag.ContaClienteId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ContaDestinoId" class="control-label"></label>
-                <select asp-for="ContaDestinoId" class ="form-control" asp-items="ViewBag.ContaDestinoId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
