Exibição dos valores do banco de dados na adição e edição de criptomoedas - no selectgit add .git add .

--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
@@ -18,11 +18,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Simbolo" class="control-label"></label>
-                <select asp-for="Criptomoeda.Simbolo" class="form-control" asp-items="ViewBag.Criptomoeda"></select>
+                <select asp-for="Criptomoeda.Simbolo" class="form-control" asp-items="ViewBag.CriptomoedaIdSimb"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Nome" class="control-label"></label>
-                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaNome">
+                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaId">
                         
                 </select>
             </div>
