--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Edit.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Edit.cshtml
@@ -19,12 +19,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Simbolo" class="control-label"></label>
-                <select asp-for="Criptomoeda.Simbolo" class="form-control" asp-items="ViewBag.CriptomoedaHojeId"></select>
+                <select asp-for="Criptomoeda.Simbolo" class="form-control" asp-items="ViewBag.CriptomoedaIdSimb"></select>
                 <span asp-validation-for="Criptomoeda.Simbolo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Nome" class="control-label"></label>
-                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaHojeId"></select>
+                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaId"></select>
                 <span asp-validation-for="Criptomoeda.Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
