Filtrando busca de criptomoedas por nome

--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -27,7 +27,11 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedasHoje" asp-action="Index">Criptomoedas</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedasHoje" asp-action="Index">Tempo Real</a>
+                        </li>
+                        <li class="nav-item"> 
+                            @*APENAS PARA CADASDTRO DE NOVAS CRIPTOMOEDAS - ADM*@
+                            <a class="nav-link text-white" asp-area="" asp-controller="Criptomoedas" asp-action="Index">Criptomoedas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Index">Transações</a>
