--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create">Adicionar</a>
 </p>
 
-<form asp-controller="Criptomoedas" asp-action="Index">
+<form asp-controller="Criptomoedas" asp-action="Index" method="get">
     <p>
         Nome: <input type="text" name="SearchString">
         <input type="submit" value="Filtrar" />
