Adicionando tabela criptomoedas-saldo; alterando views

--- a/BlockTechMVC/BlockTechMVC/Views/Saldos/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Saldos/Create.cshtml
@@ -17,16 +17,16 @@
                 <input asp-for="TransacaoId" class="form-control" />
                 <span asp-validation-for="TransacaoId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="SaldoAtualRS" class="control-label"></label>
                 <input asp-for="SaldoAtualRS" class="form-control" />
                 <span asp-validation-for="SaldoAtualRS" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <label asp-for="quantidadeCripo" class="control-label"></label>
                 <input asp-for="quantidadeCripo" class="form-control" />
                 <span asp-validation-for="quantidadeCripo" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
