--- a/BlockTechMVC/BlockTechMVC/Views/Saldos/Delete.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Saldos/Delete.cshtml
@@ -17,7 +17,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TransacaoId)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SaldoAtualRS)
         </dt>
         <dd class = "col-sm-10">
@@ -28,7 +28,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.quantidadeCripo)
-        </dd>
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
