--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Adicionar</a>
+    <a asp-action="Create" class="btn btn-light">Adicionar</a>
 </p>
 
 <form asp-controller="Criptomoedas" asp-action="Index" method="get">
@@ -45,9 +45,9 @@
                 @Html.DisplayFor(modelItem => item.Cadastro)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Details</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Delete</a>
             </td>
         </tr>
 }
