--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<BlockTechMVC.Models.CriptomoedaHoje>
 
 @{
-    ViewData["Title"] = "Criptomoedas";
+    ViewData["Title"] = "Criptomoedas em Tempo Real";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>
-    <a asp-action="Create">Adicionar</a>
-</p>
+@*
+    CONSUMIR DE UMA API*
+    <p>
+    <a asp-action="Create" class="btn btn-light">Adicionar</a>
+</p>*@
 
 <form asp-controller="CriptomoedasHoje" asp-action="Index">
     <p>
@@ -47,9 +49,9 @@
             </td>
 
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a> 
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
             </td>
         </tr>
 }
