--- a/BlockTechMVC/BlockTechMVC/Views/Saldos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Saldos/Index.cshtml
@@ -1,45 +1,46 @@
 ﻿@model IEnumerable<BlockTechMVC.Models.Saldo>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Saldo";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
-<p>
+@*<p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.TransacaoId)
-            </th>
-            <th>
+            </th>*@
+            @*<th>
                 @Html.DisplayNameFor(model => model.SaldoAtualRS)
-            </th>
-            <th>
+            </th>*@
+            @*<th>
                 @Html.DisplayNameFor(model => model.quantidadeCripo)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.TransacaoId)
-            </td>
-            <td>
+            </td>*@
+            @*<td>
                 @Html.DisplayFor(modelItem => item.SaldoAtualRS)
-            </td>
+            </td>*@
+            <!--<td>
+                
+                Html.DisplayFor(modelItem => item.quantidadeCripo)
+            </td>-->
             <td>
-                @Html.DisplayFor(modelItem => item.quantidadeCripo)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Delete</a>
             </td>
         </tr>
 }
