--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
@@ -5,11 +5,14 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+<br />
+<br />
+
 @*
-    CONSUMIR DE UMA API*
-    <p>
-    <a asp-action="Create" class="btn btn-light">Adicionar</a>
-</p>*@
+        CONSUMIR DE UMA API*
+        <p>
+        <a asp-action="Create" class="btn btn-light">Adicionar</a>
+    </p>*@
 
 <form asp-controller="CriptomoedasHoje" asp-action="Index">
     <p>
@@ -36,24 +39,25 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Data)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Criptomoeda.Nome)
-            </td>
-            <td>
-                R$ @Html.DisplayFor(modelItem => item.Valor)
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Criptomoeda.Nome)
+                </td>
+                <td>
+                    R$ @Html.DisplayFor(modelItem => item.Valor)
+                </td>
 
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a> 
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
-            </td>
-        </tr>
-}
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
