--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model BlockTechMVC.Models.Criptomoeda
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>Criptomoeda</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,14 +27,14 @@
                 <span asp-validation-for="Cadastro" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
