--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
@@ -5,14 +5,12 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<br />
-<br />
-
-@*
-        CONSUMIR DE UMA API*
-        <p>
+        @*CONSUMIR DE UMA API**@
+    <p>
         <a asp-action="Create" class="btn btn-light">Adicionar</a>
-    </p>*@
+    </p>
+        
+<br />
 
 <form asp-controller="CriptomoedasHoje" asp-action="Index">
     <p>
