--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -23,7 +23,7 @@
     <table class="table table-hover">
         <caption>Lista de Criptomoedas</caption> @*acessibilidade*@
         <thead>
-            <tr>
+            <tr class="bg-dark text-white">
                 <th>
                     @Html.DisplayNameFor(model => model.Nome)
                 </th>
