--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-@if (User.IsInRole("Administrador"))
+@if (User.IsInRole("Admin"))
 {
 <p>
     <a asp-action="Create" class="btn btn-light">Adicionar</a>
@@ -58,12 +58,12 @@
                     </td>
                     <td></td>
                     <td style="white-space: nowrap">
-                        @if (User.IsInRole("Administrador"))
+                        @if (User.IsInRole("Admin"))
                         {
                             <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
                         }
                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
-                        @if (User.IsInRole("Administrador"))
+                        @if (User.IsInRole("Admin"))
                         {
                             <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
                         }
