--- a/BlockTechMVC/BlockTechMVC/Views/CriptoSaldos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptoSaldos/Index.cshtml
@@ -35,12 +35,12 @@
                     @Html.DisplayFor(modelItem => item.Quantidade)
                 </td>
                 <td>
-                    @if (User.IsInRole("Administrador"))
+                    @if (User.IsInRole("Admin"))
                     {
                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
                     }
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
-                    @if (User.IsInRole("Administrador"))
+                    @if (User.IsInRole("Admin"))
                     {
                         <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
                     }
