--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
@@ -6,10 +6,12 @@
 <h1>@ViewData["Title"]</h1>
 
         @*CONSUMIR DE UMA API**@
+@if (User.IsInRole("Admin"))
+{
     <p>
         <a asp-action="Create" class="btn btn-light">Adicionar</a>
     </p>
-        
+}
 <br />
 
 <form asp-controller="CriptomoedasHoje" asp-action="Index">
@@ -51,9 +53,15 @@
                 </td>
 
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                    }
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
+                    }
                 </td>
             </tr>
         }
